# MiniAFSDCode

./: .bumpversion.cfg  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  release_steps.txt  setup.cfg
MiniAFSDCode/: MillGCode_XYA_CustomStepper.py
MiniAFSDCode/Mill_GCode_CustomAccel/: timerSetup.ino
mini_afsd/: MillGCode_XYA_CustomStepper.py  __init__.py  __main__.py  controller.py  gui.py  labjack_handler.py  serial_processor.py
mini_afsd/Mill_GCode_CustomAccel/: Mill_GCode_CustomAccel.ino
