[metadata]
name = MiniAFSDCode
version = 0.1.0
author = Ryan Gottwald
author_email = insert_email_here
description = Code for controlling a miniature MELD machine.
long_description = file: README.rst
long_description_content_type = text/x-rst
license_files =
    LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
keywords =
    AFSD
    additive friction stir deposition
    MELD
    engineering
url = https://github.com/derb12/pybaselines
project_urls =
    Source Code = https://github.com/derb12/pybaselines
    Documentation = https://pybaselines.readthedocs.io

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    labjack-ljm
    pyserial
zip_safe = False

[options.packages.find]
include = MiniAFSDCode, MiniAFSDCode.*

[flake8]
max-line-length = 100
docstring-convention = numpy
exclude =
    docs/*
ignore =
    E731,  # do not assign a lambda expression, use a def
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    D401  # first line should be in imperative mood; try rephrasing
per-file-ignores =
    # F401: module imported but unused
    # D205: 1 blank line required between summary line and description
    __init__.py: F401, D205
    api.py: F401
    # D400: first line should end with a period
    examples/*: D205, D400
